# HDLs

./: README.md
Adder/: adder.do  adder.vhdl  tb_adder.vhdl
Counter/: counter.do  counter.vhdl  tb_counter.vhdl
Mult/: mult.do
Mux/: mux.do  tb_mux.vhdl
Register/: tb_reg16.vhdl
Seven_Seg/: tb_seven_segment_cntrl.vhdl
Shifter/: shifter.vhdl  tb_shifter.vhdl
SystemC/: README.md
SystemC/Async_Mux/: main.cpp
SystemC/Memory/: main.cpp
SystemC/Sync_Counter/: main.cpp
SystemC/clock_div/: CMakeLists.txt  main.cpp  trace.vcd
VHDL/: README.md
VHDL/cronometro/: cronometro.vhdl  testbench.do  testbench.vhdl  vhdl_ls.toml
VHDL/cronometro/counter/: counter.vhdl  testbench.do  testbench.vhdl  vsim.wlf  wave.ps
VHDL/cronometro/register/: reg16.do  reg16.vhdl
VHDL/cronometro/seven_segment/: seven_segment.vhdl  testbench.do  testbench.vhdl
VHDL/cronometro/sintese/: de10_lite.qsf  de10_lite.vhd
VHDL/cronometro/state_machine/: data_structs.vhdl  fsm.vhdl  testbench.do  testbench.vhdl  vsim.wlf  wave.ps
VHDL/cronometro/timer/: testbench.do  testbench.vhdl  timer.vhdl
VHDL/mult8x8/: adder.vhdl  counter.vhdl  mult_8x8.do  mult_8x8.vhdl  mult_control.vhdl  tb_mult_8x8.vhdl
VHDL/mult8x8/Adder/: tb_adder.vhdl
VHDL/mult8x8/Mult/: mult.vhdl  tb_mult.vhdl
mult8x8/: counter.vhdl  mult.vhdl  mult_8x8.vhdl  mult_control.vhdl  mux.vhdl  reg16.vhdl  seven_segment_cntrl.vhdl  shifter.vhdl  tb_mult_8x8.vhdl
mult8x8.lnx/: adder.vhdl  mult8x8.vhdl  reg16.vhdl  shifter.vhdl  tb_mult8x8.vhdl
mult_control/: mult_control.vhdl  tb_mult_control.vhdl
(+9 files in other folders)
